--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -43,7 +43,8 @@ input[type="submit"]::-moz-focus-inner { padding: 0; border: 0 }
 
 body{
 	font: {
-		family: Arial,sans-serif;
+		// family: Arial,sans-serif;
+		family: "Trebuchet MS", "Helvetica CY", sans-serif;
 		weight: normal;
 		size: 12px;
 	}
